Fixed Spacing / Header Media Queries
Added media queries to header text and logo for mobile/tablet. Added
extra rows to grid section to add more white space at full browser
width.

--- a/assets/css/2-basics/grid.sass
+++ b/assets/css/2-basics/grid.sass
@@ -2,24 +2,21 @@
   display: flex
   justify-content: space-around
   margin-right: 1.4%
-
   @media (max-width: 760px)
     flex-direction: column
-    margin-right: 2%
+    margin-right: 3%
 
 .col
   margin: 0.7% 0 0.7% 1.4%
   @media (max-width: 760px)
-    margin: 1% 0 1% 2%
+    margin: 1% 0 1% 3%
 
 .span-1-of-2
   width: 49.2%
-
   @media (max-width: 760px)
-    width: 98%
+    width: 97%
 
 .span-1-of-3
   width: 32.26%
-
   @media (max-width: 760px)
-    width: 98%
+    width: 97%
