--- a/assets/css/2-basics/reusables.sass
+++ b/assets/css/2-basics/reusables.sass
@@ -1,7 +1,7 @@
 // REUSABLE COMPONENTS
 
 .row
-  max-width: 1140px
+  max-width: 1200px
   margin: 0 auto
 
 section
