--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1346,7 +1346,7 @@ html {
   font-family: "Slabo 27px", serif; }
 
 .row {
-  max-width: 1140px;
+  max-width: 1200px;
   margin: 0 auto; }
 
 section {
@@ -1403,25 +1403,25 @@ a:hover {
   @media (max-width: 760px) {
     .row-grid {
       flex-direction: column;
-      margin-right: 2%; } }
+      margin-right: 3%; } }
 
 .col {
   margin: 0.7% 0 0.7% 1.4%; }
   @media (max-width: 760px) {
     .col {
-      margin: 1% 0 1% 2%; } }
+      margin: 1% 0 1% 3%; } }
 
 .span-1-of-2 {
   width: 49.2%; }
   @media (max-width: 760px) {
     .span-1-of-2 {
-      width: 98%; } }
+      width: 97%; } }
 
 .span-1-of-3 {
   width: 32.26%; }
   @media (max-width: 760px) {
     .span-1-of-3 {
-      width: 98%; } }
+      width: 97%; } }
 
 header {
   background-image: linear-gradient(rgba(0, 0, 15, 0.8), rgba(0, 0, 15, 0.8)), url(/assets/img/hero-image.jpg);
@@ -1432,24 +1432,39 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
+  @media (max-width: 480px) {
+    header h1 {
+      font-size: 2.2rem; } }
+  @media (max-width: 380px) {
+    header h1 {
+      font-size: 2rem; } }
+  @media (max-width: 380px) {
+    header h3 {
+      font-size: 1.2rem; } }
   header i {
     border: solid #614b63;
     border-width: 0 4px 4px 0;
     display: inline-block;
     padding: 12px; }
   header .nav-container {
-    padding-top: 40px;
+    padding: 40px 20px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1140px;
+    max-width: 1160px;
     margin: 0 auto; }
     @media (max-width: 768px) {
       header .nav-container {
-        flex-direction: column; } }
+        justify-content: center; } }
     header .nav-container img {
       height: 50px;
       margin-bottom: 20px; }
+      @media (max-width: 768px) {
+        header .nav-container img {
+          height: 58px; } }
+      @media (max-width: 480px) {
+        header .nav-container img {
+          height: 65px; } }
   header .hero-text-box {
     width: 100%;
     text-align: center;
